:bug: Fix Checkbox not aligned center in some cases
close #16695
close #19450

--- a/components/checkbox/style/mixin.less
+++ b/components/checkbox/style/mixin.less
@@ -61,7 +61,7 @@
 
         position: absolute;
         top: 50%;
-        left: 21%;
+        left: 22%;
         display: table;
         width: @check-width;
         height: @check-height;
